# PyHTK

./: README.md  pyproject.toml
notebooks/: HTKFeaturesExplained.ipynb  ResamplingTest.ipynb
pyhtk/: HTKFeat.py
python/: HTK.py  HTKFeat.py
python-notebooks/: HTKFeaturesExplained.ipynb  ResamplingTest.ipynb
python-test/: file.htk  filter.csv  gen_filt.c  hcopy.conf  test.py
python-test/8k/: file.raw  file8k.htk
tests/: HTK.py  test.py
tests/8k/: filter8k.csv  gen_filt8k.c  hcopy8k.conf  test8k.py
